--- a/stores/templates/create_store_item.html
+++ b/stores/templates/create_store_item.html
@@ -7,7 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-   <from action = "{% url create_store_item %}" method="POST" >  </from>
-    
+    <!-- check step 5 in create froms -->
+   <form action = "{% url 'create_store_item' %}" method="POST" > {% csrf_token %} {{form | create_store_item}} </form>
+    <button type="submit">submit</button>
 </body>
 </html>
