all there in forms

--- a/stores/templates/create_store_item.html
+++ b/stores/templates/create_store_item.html
@@ -8,9 +8,12 @@
 </head>
 <body>
     <p> Crearte Form </p>
-    {{form}}
-    <!-- check step 5 in create froms -->
-   <form action = "{% url 'create_store_item' %}" method="POST" > {% csrf_token %} {{form | create_store_item}} </form>
-    <button type="submit">submit</button>
+    <form action = "{% url 'create-store-item' %}" method="POST" > 
+        {% csrf_token %} 
+        {{form }} 
+        
+      <button type="submit">submit</button>
+  
+    </form>
 </body>
 </html>
