--- a/stores/templates/store_item_list.html
+++ b/stores/templates/store_item_list.html
@@ -43,6 +43,9 @@
         <p>No store items yet!</p>
         {% endif %}
       </div>
+      <button>
+        <a href="{& 'delete_store_item' item_id=store_item.id &}"> delete </a>
+    </button>
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
