--- a/stores/templates/store_item_list.html
+++ b/stores/templates/store_item_list.html
@@ -17,7 +17,8 @@
       <div class="container-fluid">
         <a class="navbar-brand">WAM Store</a>
         <button class="d-flex btn btn-outline-light" type="submit">
-          Add Item
+          <a href="{% url 'create-store-item' %}" > Add Item</a>
+         
         </button>
       </div>
     </nav>
@@ -36,6 +37,9 @@
               <h5 class="card-title">{{ item.name }}</h3>
                 <h6 class="card-subtitle mb-2 text-muted">Kind: {{ item.kind }}</h6>
                 <p class="card-text">{{ item.description }}</p> 
+                <button>
+                  <a href="{% url 'delete-store-item' item_id=item.id %}"> delete </a>
+              </button>
               </div>
             </div>
         </div>
@@ -43,9 +47,6 @@
         <p>No store items yet!</p>
         {% endif %}
       </div>
-      <button>
-        <a href="{& 'delete_store_item' item_id=store_item.id &}"> delete </a>
-    </button>
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
