--- a/stores/templates/create_store_item.html
+++ b/stores/templates/create_store_item.html
@@ -1,19 +1,24 @@
+{% load crispy_forms_tags %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
+    integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn"
+    crossorigin="anonymous"/>
     <title>Document</title>
 </head>
 <body>
-    <p> Crearte Form </p>
+    <p> Create Form </p>
     <form action = "{% url 'create-store-item' %}" method="POST" > 
         {% csrf_token %} 
-        {{form }} 
-        
-      <button type="submit">submit</button>
-  
-    </form>
+        {{form|crispy}}
+        <button type="submit">submit</button>
+    </form>   
+    
 </body>
 </html>
