--- a/stores/templates/update_store_item.html
+++ b/stores/templates/update_store_item.html
@@ -10,12 +10,12 @@
  <h1>EDITE & UPDATE</h1>
     <form action="{% url 'update-store-item' item_id=store_item.id %}"
         method="POST">
-        {&csrf_token&}
-        {{form}}
+        {% csrf_token %}
+        {{ form }}
 
     <button type="submit"> Edite </button>
-    <button><a href="{% url 'update-store-item'  %}">EDITE</a></button>
-
+    <button><a href="{% url 'update-store-item' %}">EDITE</a></button>
+    <input type="submit" value="Update"/> 
 </form>
 </body>
 </html>
